# fizmo-console

./: .gitignore  CHANGELOG.md  CHANGELOG.txt  CMakeLists.txt  COPYRIGHT.md  COPYRIGHT.txt  Makefile  Makefile.am  Makefile.in  aclocal.m4  config-conds.m4  config.default.mk  config.macports.mk  configure  configure.ac
autom4te.cache/: output.1  requests  traces.0  traces.1
debian/: changelog  control  copyright  fizmo-console-launcher  fizmo-console-launcher.6  fizmo-console.install  fizmo-console.postinst  fizmo-console.prerm  rules  watch
doc/: changelog.xml  copyright.xml  create-mds.sh  create-txts.sh
src/fizmo-console/: Makefile  Makefile.am  Makefile.in  fizmo-console.c
src/man/: Makefile  fizmo-console.6
